# stack

./: .coverage  .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: todo.md
stack/cli/: __init__.py  commands.py  main.py
stack/cli/generators/: configure_project.py  initialise.py
stack/cli/generators/backend/: fastapi.py  fastapi_addons.py
stack/cli/generators/frontend/: vanilla.py
stack/cli/templates/: docker_templates.py  fast_api_template.py  front_end_templates.py
stack/cli/utils/: utils.py
tests/: test_cli.py
